<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_game_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".PlayNewGame">


    <Button
        android:id="@+id/PrevButton"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="31dp"
        android:text="@string/prev_move"
        android:textSize="12sp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/Board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/black"
        app:columnCount="8"
        app:rowCount="8">

        <com.example.chrischessapp.TileView
            android:id="@+id/a8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_rook" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_knight" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_bishop" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_queen" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_king" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_bishop" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_knight" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_rook" />

        <com.example.chrischessapp.TileView
            android:id="@+id/a7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/black_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/a6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/a5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/a4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/a3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white" />

        <com.example.chrischessapp.TileView
            android:id="@+id/a2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_pawn" />

        <com.example.chrischessapp.TileView
            android:id="@+id/a1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_rook" />

        <com.example.chrischessapp.TileView
            android:id="@+id/b1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_knight" />

        <com.example.chrischessapp.TileView
            android:id="@+id/c1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_bishop" />

        <com.example.chrischessapp.TileView
            android:id="@+id/d1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_queen" />

        <com.example.chrischessapp.TileView
            android:id="@+id/e1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_king" />

        <com.example.chrischessapp.TileView
            android:id="@+id/f1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_bishop" />

        <com.example.chrischessapp.TileView
            android:id="@+id/g1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/brown"
            android:src="@drawable/white_knight" />

        <com.example.chrischessapp.TileView
            android:id="@+id/h1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:src="@drawable/white_rook"
            android:onClick="getInput" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/AIButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="186dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/PrevButton"
        android:text="@string/ai"
        android:textAlignment="center" />

    <Button
        android:id="@+id/drawButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="21dp"
        android:layout_toStartOf="@+id/resignButton"
        android:text="@string/draw" />

    <Button
        android:id="@+id/resignButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="22dp"
        android:text="@string/resign" />

</RelativeLayout>